# tibber-analysis-tool

./: LICENSE  README.md  VERSION  pyproject.toml
.github/workflows/: build-package.yml  ci.yml  release.yml
ci-tool/: patch_version.sh
src/tibber_analysis_tool/: main.py  tibber_energy_summary.py
