[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "tibber-analysis-tool"
description = "Tibber energy analysis"
readme = "README.md"
authors = [
    { name = "Tony Xiang", email = "19280867+TonyXiang8787@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = ["requests", "polars", "holidays"]
license = "BSD-3-Clause"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff"]

[tool.hatch.version]
path = "VERSION"
pattern = "^\\s*(?P<version>[^\\s]+)\\s*$"

[project.scripts]
tibber-analysis-tool = "tibber_analysis_tool.main:main"

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "TID", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"